2.AKS/Monitoring/grafana/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 8.3.6
    helm.sh/chart: grafana-6.22.0
  name: grafana-ing
  namespace: monitoring
spec:
  rules:
  - host: grafana.nodespringboot.org
    http:
      paths:
      - path: /grafana(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana 
            port:
              number: 3000               # 포트를 맞춤 (이름 혹은 숫자)
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana 
            port:
              number: 3000
